# rust-actix-realworld-example-app

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  config.rs  db.rs  error.rs  hub.rs  jwt.rs  lib.rs  main.rs  password.rs  schema.rs  test.rs
src/app/: auth.rs  error.rs  mod.rs  res.rs
src/app/articles/: build_article_list.rs  create_article.rs  delete_article.rs  favorite_article.rs  feed_articles.rs  get_article.rs  list_articles.rs  mod.rs  replace_tags.rs  slugify.rs  unfavorite_article.rs  update_article.rs
src/app/articles/comments/: add.rs  add_comment.rs  delete.rs  delete_comment.rs  list.rs  list_comments.rs  mod.rs
src/app/auth/: mod.rs  password.rs  register_user.rs  validate_signup.rs
src/app/profiles/: add_follower.rs  find_profile.rs  mod.rs  remove_follower.rs
src/app/tags/: list_tags.rs  mod.rs
src/app/users/: authenticate.rs  jwt.rs  mod.rs  password.rs  register_user.rs  update_user.rs  validate_signup.rs
src/db/: articles.rs  comments.rs  followers.rs  mod.rs  users.rs
src/mdl/: article.rs  follower.rs  mod.rs  user.rs
