[package]
authors = ["ryym <ryym.64@gmail.com>"]
name = "conduit"
version = "0.1.0"

[dependencies]
actix-web = "0.7.13"
chrono = "0.4.6"
dotenv = "0.13.0"
env_logger = "0.5.13"
failure = "0.1.3"
jsonwebtoken = "5.0.1"
lazy_static = "1.2.0"
log = "0.4.5"
pbkdf2 = "0.3.0"
r2d2 = "0.8.2"
rand = "0.5.5"
regex = "1.0.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
slug = "0.1.4"

[dependencies.diesel]
features = [
    "chrono",
    "postgres",
    "r2d2",
]
version = "1.3.3"
